<resources>
    <string name="app_name">W记账</string>
    <string name="mingixi">明细</string>
    <string name="jizhang">记账</string>
    <string name="my">个人中心</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="交通">交通</string>
    <string name="打车">打车</string>
    <string name="_25">1000元</string>
    <string name="_12_3_10_00">12月3日10：00</string>
    <string name="item_mainlv_iv">item_mainlv_iv</string>
    <string name="_0_0">今日支出 ￥0 收入 ￥0</string>
    <string name="本月支出">本月支出</string>
    <string name="本月收入">本月收入</string>
    <string name="本月预算">本月预算</string>
    <string name="隐藏">隐藏</string>
    <string name="图表分析">图表分析</string>
    <string name="返回">返回</string>
    <string name="_2020_12_3_11_49">2020年12月3日 11:49</string>
    <string name="添加备注">添加备注</string>
    <string name="其他">其他</string>
    <string name="设置">设置</string>
    <string name="备注">备注</string>
    <string name="取消">取消</string>
    <string name="确定">确定</string>
    <string name="设置预算">设置预算</string>
    <string name="请输入搜素内容">请输入搜索内容</string>
    <string name="重查">查询内容不存在，请重新查询</string>
    <string name="历史记录">历史记录</string>
    <string name="_2020_12">2020年12月28日</string>
    <string name="本月历史账单">本月历史账单</string>
    <string name="点击">点击</string>
    <string name="清空记录">清空记录</string>
    <string name="黄色">黄色</string>
    <string name="粉色">粉色</string>
    <string name="settingcolor">颜色选择</string>
    <string name="年账单">年账单:1000元</string>
    <string name="显示账单">显示账单</string>
    <string name="个人中心">个人中心</string>
    <string name="_182_5882">182****5882</string>
    <string name="张三">张三</string>
</resources>