<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@color/white">
    <ImageView
        android:id="@+id/item_mainlv_iv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_car"
        android:contentDescription="@string/item_mainlv_iv" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/item_mainlv_iv"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_toEndOf="@id/item_mainlv_iv"
        android:layout_marginStart="10dp">
        <TextView
            android:id="@+id/item_mainlv_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/交通"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/item_mainlv_tv_beizhu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/打车"
            android:layout_marginTop="5dp"
            android:textSize="12sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        tools:ignore="RelativeOverlap">
        <TextView
            android:id="@+id/item_mainlv_tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/item_mainlv_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_3_10_00"
            android:layout_marginTop="5dp"
            android:textSize="12sp"/>

    </LinearLayout>
</RelativeLayout>
