<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">
    <TextView
        android:id="@+id/jizhang_beizhu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/添加备注"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/jizhang_beizhu_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jizhang_beizhu_tv"
        android:hint="@string/备注"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/jizhang_beizhu_et"
        android:padding="10dp">
        <Button
            android:id="@+id/jizhang_beizhu_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/取消"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />
        <Button
            android:id="@+id/jizhang_beizhu_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/确定"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />
    </LinearLayout>
</RelativeLayout>