<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey_f3f3f3">
    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/yellow">
        <ImageView
            android:id="@+id/zhangdan_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/返回"
            />

        <Button
            android:id="@+id/zhangdan_bt"
            android:background="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/zhangdan_tv_money"
            android:text="@string/显示账单"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/zhangdan_tv_money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/年账单"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap"/>
        <!--    tools:ignore="RelativeOverlap"确定长度不会被覆盖        -->


    </RelativeLayout>

    <ListView
        android:id="@+id/zhangdan_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_top_layout"
        android:divider="@null"
        android:dividerHeight="6dp"
        android:background="@color/grey_f3f3f3"/>
    <ImageButton
        android:id="@+id/zhangdan_bt1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/my"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@drawable/test"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/个人中心" />

</RelativeLayout>