<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_f3f3f3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/history_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/返回" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/历史记录"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>
        <EditText
            android:id="@+id/search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/history_iv_back"
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/请输入搜素内容"
            android:layout_toEndOf="@id/history_iv_back"
            android:paddingStart="20dp"
            android:layout_marginStart="10dp">
            <requestFocus/>
        </EditText>
        <ImageView
            android:id="@+id/search_iv_sh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:onClick="onClick"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/history_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2020_12"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/history_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:divider="@null"
        android:dividerHeight="5dp"/>
</LinearLayout>