<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/setting_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingcolor"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/color_btn_yellow"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:drawableTop="@mipmap/it_guanyu"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/黄色"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:typeface="serif"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/color_btn_pink"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/pink"
            android:drawableTop="@mipmap/it_guanyu"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/粉色"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:typeface="serif"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

    </LinearLayout>





</LinearLayout>
